# vs-arena

./: CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  prd.md  todo.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: agents.py  debate.py  ollama.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/graph/: __init__.py  executor.py  graph.py  state.py
backend/app/graph/nodes/: __init__.py  debater.py  judge.py  utils.py
backend/app/graph/prompts/: __init__.py  debater_prompts.py  judge_prompts.py
backend/app/models/: agent.py  run.py  schemas.py  turn.py
backend/app/services/: agent_crud.py  ollama.py  run_crud.py
backend/tests/: conftest.py
backend/tests/api/: test_agents_api.py  test_debate_api.py
backend/tests/services/: test_agent_crud.py  test_ollama.py  test_run_crud.py  test_utils.py
docker/: init.sql
docs/: USER_GUIDE.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agent/: loading.tsx  page.tsx
frontend/app/debate/: page.tsx
frontend/components/agent/: agent-card.tsx  agent-detail-drawer.tsx  agent-editor.tsx  (+7 more)
frontend/hooks/: use-agent-preview.ts  use-agents.ts  use-debate-flow.ts  use-debate-replay.ts  use-debate-stream.ts  use-debate.ts  use-keyboard-shortcuts.ts  use-ollama-models.ts  use-persistent-state.ts
frontend/lib/: api-client.ts  error-messages.ts  types.ts
frontend/tests/: setup.ts
(+56 files in other folders)
