[project]
name = "vs-arena-backend"
version = "0.1.0"
description = "VS Arena - AI Debate Agent Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "langgraph>=0.6.11",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "ollama>=0.6.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "sse-starlette>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "black>=25.11.0",
    "ruff>=0.14.9",
    "mypy>=1.19.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
